fix: prevent long code blocks from overflowing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -302,3 +302,11 @@ border-radius: 4px; */
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
+
+pre,
+code {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  white-space: pre-wrap;
+}
+
